--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main class="main">
+  <article class="card">
     <header class="header">
       <div class="wrapper">
         <div class="top-row">
@@ -60,7 +60,7 @@
 
     </header>
 
-  </main>
+  </article>
 
 </body>
 
