--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 <body>
   <article class="card">
     <header class="header">
+      <svg class="header-bg-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#f3f4f5" fill-opacity="1"
+          d="M0,32L26.7,37.3C53.3,43,107,53,160,80C213.3,107,267,149,320,192C373.3,235,427,277,480,272C533.3,267,587,213,640,181.3C693.3,149,747,139,800,122.7C853.3,107,907,85,960,69.3C1013.3,53,1067,43,1120,74.7C1173.3,107,1227,181,1280,181.3C1333.3,181,1387,107,1413,69.3L1440,32L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+        </path>
+      </svg>
+      <svg class="header-bg-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#f3f4f5" fill-opacity="1"
+          d="M0,96L60,101.3C120,107,240,117,360,122.7C480,128,600,128,720,128C840,128,960,128,1080,138.7C1200,149,1320,171,1380,181.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+        </path>
+      </svg>
       <div class="wrapper">
+
         <div class="top-row">
           <svg class="left-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 14 14" height="14"
             width="14">
